force-app/main/default/objects/HardwareFees__c/HardwareFees__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070118 - Created for phase 1</description>
    <label>Hardware Fees</label>
    <nameField>
        <displayFormat>HF-{0000}</displayFormat>
        <label>Hardware Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hardware Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>