force-app/main/default/objects/HardwareFees__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>