force-app/main/default/objects/HardwareFees__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <description>PacPoint-FT063018 - Created for phase 1</description>
    <label>Hardware</label>
    <length>100</length>
    <type>Text</type>
</CustomField>